--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="text_btn_sign_up">Sign Up</string>
 
     <string name="text_radio_customer">Customer</string>
-    <string name="text_radio_vendor">Vendor</string>
+    <string name="text_radio_vendor">Mart</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
