Signup forms done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="text_hint_email">Email</string>
     <string name="text_hint_password">Password</string>
     <string name="text_hint_phone">Phone</string>
+    <string name="OwnerName">Owner Name</string>
+    <string name="OwnerPhone">Owner Phone</string>
+    <string name="OrderDetail">Order Detail</string>
+    <string name="Voucher">Voucher</string>
     <string name="text_hint_address">Address</string>
     <string name="text_btn_forgot_password">Forgot password?</string>
     <string name="text_btn_sign_in">Sign In</string>
