Order module updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="text_hint_phone">Phone</string>
     <string name="OwnerName">Owner Name</string>
     <string name="OwnerPhone">Owner Phone</string>
-    <string name="OrderDetail">Order Detail</string>
+    <string name="OrderDetail">All OrderS</string>
     <string name="Voucher">Voucher</string>
     <string name="text_hint_address">Address</string>
     <string name="text_btn_forgot_password">Forgot password?</string>
