--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="customer_name">Customer Name:</string>
     <string name="complaints">Complaints:</string>
 
+    <string name="default_notification_channel_id">1234</string>
+    <string name="channel_name">Android</string>
 </resources>
